doc: created folder, file, and loading bar image. Make desktop icon class that stops blurring pixel art.

--- a/style.css
+++ b/style.css
@@ -304,3 +304,10 @@ img{
   height: 100%;
   background-color: black;
 }
+.desktop-icon {
+  width: 60px;
+  margin:5px;
+  image-rendering: pixelated;
+  image-rendering: -moz-crisp-edges;
+  image-rendering: crisp-edges;
+}
